<resources>
    <string name="a_new_version_is_available">A new version is available.</string>
    <string name="a_new_version_of_samsung_cloud_is_available">A new version of Samsung Cloud is available. You can update it after your data is restored.</string>
    <string name="a_request_to_access_to_samsung_cloud_was_denied_because_we_couldnt_verify_that_it_was_you">"A request to access to Samsung Cloud was denied because we couldn't verify that it was you."</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_brand_name">About %s</string>
    <string name="about_samsung_cloud">About Samsung Cloud</string>
    <string name="accessibility">Accessibility</string>
    <string name="account_type">com.osp.app.signin</string>
    <string name="accs_switch">Switch</string>
    <string name="add_email_address">Add email address</string>
    <string name="add_one_drive_to_gallery_and_my_files">Add OneDrive to Gallery and My Files to get all this:</string>
    <string name="add_your_email_address_to_your_samsung_account_so_you_can_send_you_the_verification_email">Add your email address to your Samsung account so we can send you the verification email.</string>
    <string name="after_the_move_gallery_will_be_continuously_backed_up">After the move, Gallery will be continuously backed up to OneDrive.</string>
    <string name="after_you_agree_to_all_of_the_above_this_message_will_not_be_shown_again">After you agree to all of the above, this message will not be shown again.</string>
    <string name="after_your_accounts_are_connected">After your accounts are connected, your pictures and videos will automatically start syncing to OneDrive.</string>
    <string name="agree">Agree</string>
    <string name="alarms">Alarms</string>
    <string name="album">Album</string>
    <string name="album_size_used">%1$s %2$s used</string>
    <string name="albums_to_download">Albums to download</string>
    <string name="albums_to_sync">Albums to sync</string>
    <string name="albums_to_upload">Albums to upload</string>
    <string name="all">All</string>
    <string name="all_albums">All albums</string>
    <string name="all_data_backed_up">All data backed up.</string>
    <string name="all_data_backed_up_title">All data backed up</string>
    <string name="all_data_restored_title">All data restored</string>
    <string name="all_items_permanently_deleted">All items permanently deleted.</string>
    <string name="all_your_data_has_been_restored_to_your_phone">All your data has been restored to your phone. Your SD card data is in the %s folder.</string>
    <string name="all_your_data_has_been_restored_to_your_phone_short">All your data has been restored to your phone.</string>
    <string name="all_your_data_has_been_restored_to_your_phone_your_sd_card_data_is">All your data has been restored to your phone. Your SD card data is in the %s folder.</string>
    <string name="all_your_data_has_been_restored_to_your_tablet">All your data has been restored to your tablet. Your SD card data is in the %s folder.</string>
    <string name="all_your_data_has_been_restored_to_your_tablet_short">All your data has been restored to your tablet.</string>
    <string name="all_your_data_has_been_restored_to_your_tablet_your_sd_card_data_is">All your data has been restored to your tablet. Your SD card data is in the %s folder.</string>
    <string name="all_your_previous_samsung_cloud_settings_restore">All your previous Samsung Cloud settings will be restored so you can start syncing and backing up apps and data immediately.</string>
    <string name="allow">Allow</string>
    <string name="allow_all_files_access">Allow All files access for Samsung Cloud</string>
    <string name="allow_all_files_access_common">Allow All files access for Samsung Cloud</string>
    <string name="allow_backup_on_this_network_q">Allow backup on this network?</string>
    <string name="allow_permission">Allow permission</string>
    <string name="allow_ps_to_change_system_settings">Allow %s to change system settings</string>
    <string name="allow_ps_to_use_network_connection">Allow %s to use network connections?</string>
    <string name="allow_required_permission">Allow required permission</string>
    <string name="allow_required_permissions">Allow required permissions</string>
    <string name="allow_the_use_of_network_connections_and_access_to_following_data">Allow %s to use network connections and access the following data:</string>
    <string name="allow_the_use_of_network_connections_for_ps_to_access_following_feature">Allow the use of network connections for %s to access the following features:</string>
    <string name="allow_this_app">Allow this app to read, modify, and delete all files on this phone and any connected storage.</string>
    <string name="allow_this_app_tablet">Allow this app to read, modify, and delete all files on this tablet and any connected storage.</string>
    <string name="always_on_display_settings">Always On Display settings</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="animated_gif">Animated GIF</string>
    <string name="any_device_signed_to_your_account_can_restore_secure_folder">Any device signed in to your account can restore Secure Folder.</string>
    <string name="app_disabled">App disabled</string>
    <string name="app_disabled_error_backup">App disabled. Tap here and enable this app so its data can be backed up.</string>
    <string name="app_disabled_error_restore">App disabled. Tap here and enable this app so its data can be restored.</string>
    <string name="app_disabled_error_sync">App disabled. Tap here and enable this app so its data can be synced.</string>
    <string name="app_info">app info</string>
    <string name="app_installation_required">App installation required</string>
    <string name="app_name">BixbySDK</string>
    <string name="app_settings">App settings</string>
    <string name="app_updated">App updated</string>
    <string name="app_updates">App updates</string>
    <string name="appbar_base_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_name">Samsung Cloud</string>
    <string name="appname_smart_switch">Smart Switch</string>
    <string name="apps">Apps</string>
    <string name="apps_set_to_back_up_automatically">Apps set to back up automatically. App backup required to back up Home screen.</string>
    <string name="backups_from_other_devices">Backups from other devices</string>
    <string name="cancel">Cancel</string>
    <string name="choose_data_to_pass_on">Choose data to pass on</string>
    <string name="cloud">Cloud</string>
    <string name="continue_button">Continue</string>
    <string name="create_albums_in_gallery_to_keep_all_your_best_shots_together">Create albums in Gallery to keep all your best shots together.</string>
    <string name="done">Done</string>
    <string name="download_samsung_apps">Download Samsung apps</string>
    <string name="looking_for_backups">Looking for backups...</string>
    <string name="maintenance_mode_backups">Temporary backups</string>
    <string name="no_albums">No albums</string>
    <string name="photos_and_videos_on_your_sd_card_cannot_be_synced">"Photos and videos on your SD card can't be synced. Move them to an album in internal storage to sync them."</string>
    <string name="required_permissions">Required permissions</string>
    <string name="samsung_cloud">Samsung Cloud</string>
    <string name="samsung_cloud_jpn">Galaxy Cloud</string>
    <string name="samsung_cloud_no_brand">Samsung account</string>
    <string name="select_the_data_you_want_to_leave">Select the data you want to leave to your legacy contacts. This data will be backed up and synced with Samsung Cloud to create your digital legacy.</string>
    <string name="suggestion_menu_button_for_as_06">Settings</string>
    <string name="suggestion_menu_button_for_as_07">Settings</string>
    <string name="suggestion_menu_button_for_as_08">Settings</string>
    <string name="suggestion_menu_button_for_as_09">Get started</string>
    <string name="suggestion_menu_button_for_as_11">Turn on</string>
    <string name="suggestion_menu_button_for_as_12">Turn on</string>
    <string name="suggestion_menu_description_for_as_06">"Back up your data so it's always safe and sync your apps and settings across your Galaxy devices."</string>
    <string name="suggestion_menu_description_for_as_07">Keep your notes, reminders, pictures, and more synced across all your Galaxy devices.</string>
    <string name="suggestion_menu_description_for_as_08">Back up your apps, messages, settings, and more so you can recover them if you lose your phone or tablet.</string>
    <string name="suggestion_menu_description_for_as_09">Sync Gallery with OneDrive to keep your pictures and videos synced and available on all of your devices.</string>
    <string name="suggestion_menu_description_for_as_11">Turn on Bluetooth sync to automatically pair your Galaxy Buds with all your Galaxy devices.</string>
    <string name="suggestion_menu_description_for_as_12">Turn on Wi-Fi sync to automatically sync your Wi-Fi networks with all your Galaxy devices.</string>
    <string name="suggestion_menu_title_for_as_06">Keep your data safe and synced</string>
    <string name="suggestion_menu_title_for_as_07">Sync your apps and devices</string>
    <string name="suggestion_menu_title_for_as_08">Protect your data with backups</string>
    <string name="suggestion_menu_title_for_as_09">Access your pictures anywhere</string>
    <string name="suggestion_menu_title_for_as_11">Easily connect your Buds</string>
    <string name="suggestion_menu_title_for_as_12">Sync your W-Fi networks</string>
    <string name="to_download_your_loved">"To download your loved one's digital legacy, you need to install the apps below from the Galaxy Store."</string>
</resources>