<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/window_background_color" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintWidth_percent="0.75">
        <TextView android:textAppearance="@style/TextNoItemTitle" android:gravity="center" android:id="@id/no_item_layout_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/no_albums" />
        <TextView android:textAppearance="@style/MoreInfoSubDescription" android:textSize="@dimen/text_size_13sp" android:id="@id/no_album_description_textview" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_20dp" android:text="@string/create_albums_in_gallery_to_keep_all_your_best_shots_together" android:textAlignment="center" />
        <TextView android:textAppearance="@style/MoreInfoSubDescription" android:textSize="@dimen/text_size_13sp" android:id="@id/move_media_to_internal_storage_description_textview" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_20dp" android:text="@string/photos_and_videos_on_your_sd_card_cannot_be_synced" android:textAlignment="center" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
