<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/activity_dl_oobe_downloadapps_0" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.samsung.android.scloud.app.core.component.RoundCorneredScrollView android:background="@color/bright_window_background_color" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" android:overScrollMode="always">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <TextView android:textAppearance="@style/DlOobeTitle" android:layout_gravity="center_horizontal" android:id="@id/tv_oobe_download_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oobe_title_margin_top" android:text="@string/download_samsung_apps" android:textAlignment="center" android:layout_marginStart="@dimen/margin_35dp" android:layout_marginEnd="@dimen/margin_35dp" />
            <TextView android:textAppearance="@style/DlOobeSubTitle" android:layout_gravity="center" android:id="@id/tv_oobe_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oobe_description_margin_top" android:text="@string/to_download_your_loved" android:layout_marginStart="@dimen/margin_35dp" android:layout_marginEnd="@dimen/margin_35dp" />
            <ScrollView android:id="@id/sv_download_samsung_apps" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_16dp" />
            <View android:background="@color/bright_window_background_color" android:layout_width="match_parent" android:layout_height="0.0dp" android:minHeight="@dimen/margin_20dp" android:layout_weight="1.0" />
            <Button android:layout_gravity="center" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dp" android:text="QA store" />
            <com.samsung.android.scloud.app.common.component.AlphaStateButton android:textAppearance="@style/TextAppearanceBottomButton" android:layout_gravity="center|bottom" android:tag="binding_2" android:background="@drawable/round_button" android:layout_width="@dimen/bottom_button_width" android:layout_height="@dimen/bottom_button_height" android:layout_marginBottom="10.0dp" android:text="@string/continue_button" android:textAlignment="center" />
        </LinearLayout>
    </com.samsung.android.scloud.app.core.component.RoundCorneredScrollView>
    <androidx.appcompat.widget.SeslProgressBar android:layout_gravity="center" android:id="@id/prog_oobe_downloadapps" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</FrameLayout>
