<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/setupwizard_device_0" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/progressbar" android:layout_width="match_parent" android:layout_height="match_parent">
        <ProgressBar android:layout_gravity="center" android:layout_width="@dimen/p_setup_wizard_progress" android:layout_height="@dimen/p_setup_wizard_progress" android:layout_marginTop="@dimen/setup_wizard_progress_padding_top" />
        <TextView android:textAppearance="@style/TextBNRSetupWizardText" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/looking_for_backups" android:textAlignment="center" />
    </LinearLayout>
    <androidx.core.widget.NestedScrollView android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="0.0dp" android:layout_marginTop="@dimen/p_setup_wizard_device_item_list_padding_top" android:fillViewport="true" android:layout_weight="1.0" android:overScrollMode="never">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="@dimen/margin_22dp" android:layout_marginEnd="@dimen/margin_22dp">
            <LinearLayout android:id="@id/temporary_backup_header" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="@dimen/margin_36dp">
                <TextView android:textStyle="bold" android:textColor="@color/text_color_secondary" android:id="@id/temporary_backup_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_13dp" android:layout_marginBottom="@dimen/margin_5dp" android:text="@string/maintenance_mode_backups" android:layout_marginStart="@dimen/margin_18dp" android:layout_marginEnd="@dimen/margin_18dp" android:accessibilityHeading="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/temporary_backup_device_container" android:layout_width="match_parent" android:layout_height="wrap_content" />
            <LinearLayout android:id="@id/this_device_header" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="36.0dp">
                <TextView android:textStyle="bold" android:textColor="@color/text_color_secondary" android:id="@id/this_device_text" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_13dp" android:layout_marginBottom="@dimen/margin_5dp" android:layout_marginStart="@dimen/margin_18dp" android:layout_marginEnd="@dimen/margin_18dp" android:accessibilityHeading="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/this_device_list_container" android:layout_width="match_parent" android:layout_height="wrap_content" />
            <LinearLayout android:id="@id/other_devices_header" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="36.0dp">
                <TextView android:textStyle="bold" android:textColor="@color/text_color_secondary" android:id="@id/other_devices_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_13dp" android:layout_marginBottom="@dimen/margin_5dp" android:text="@string/backups_from_other_devices" android:layout_marginStart="@dimen/margin_18dp" android:layout_marginEnd="@dimen/margin_18dp" android:accessibilityHeading="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/device_list_container" android:layout_width="match_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
