<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/activity_dl_select_data_0" android:background="@color/bright_window_background_color" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@color/bright_window_background_color" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="@dimen/margin_20dp" android:fillViewport="true" android:layout_above="@id/done_button_layout">
        <com.samsung.android.scloud.app.core.component.RoundCorneredScrollView android:background="@color/bright_window_background_color" android:scrollbars="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true" android:overScrollMode="always" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout android:tag="disableFooter" android:background="@color/bright_window_background_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:fillViewport="true">
                <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                    <TextView android:textAppearance="@style/DlOobeTitle" android:layout_gravity="center_horizontal" android:id="@id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oobe_title_margin_top" android:text="@string/choose_data_to_pass_on" android:textAlignment="center" android:layout_marginStart="@dimen/margin_35dp" android:layout_marginEnd="@dimen/margin_35dp" />
                    <TextView android:textAppearance="@style/DlOobeSubTitle" android:layout_gravity="center" android:id="@id/description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/oobe_description_margin_top" android:text="@string/select_the_data_you_want_to_leave" android:layout_marginStart="@dimen/margin_35dp" android:layout_marginEnd="@dimen/margin_35dp" />
                    <com.samsung.android.scloud.app.common.component.RoundCornerLinearLayout android:orientation="vertical" android:id="@id/dashboard_items" android:background="@color/bright_screen_round_corner_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_16dp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.samsung.android.scloud.app.core.component.RoundCorneredScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/done_button_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent">
        <com.samsung.android.scloud.app.common.component.AlphaStateButton android:textAppearance="@style/TextAppearanceBottomButton" android:layout_gravity="center|bottom" android:id="@id/done_button" android:background="@drawable/round_button" android:paddingLeft="@dimen/margin_16dp" android:paddingRight="@dimen/margin_16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/margin_20dp" android:minWidth="@dimen/bottom_button_width" android:minHeight="@dimen/bottom_button_height" android:text="@string/done" android:textAlignment="center" android:layout_marginStart="44.0dp" android:layout_marginEnd="44.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>
</RelativeLayout>
